--- a/persons/templates/persons/base.html
+++ b/persons/templates/persons/base.html
@@ -21,5 +21,10 @@
         {% block content %}{% endblock %}
     </div>
 </main>
+<footer>
+    {% block footer %}
+
+    {% endblock %}
+</footer>
 </body>
 </html>
