--- a/persons/templates/persons/base_navbar.html
+++ b/persons/templates/persons/base_navbar.html
@@ -22,6 +22,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         {% if user.pk %}
+                            <a class="dropdown-item" href="{% url 'profil' %}">Profil</a>
                             <a class="dropdown-item" href="{% url 'logout' %}">Déconnexion</a>
                         {% else %}
                             <a class="dropdown-item" href="{% url 'login' %}">Connexion / Creer un compte</a>
