my events in profil

--- a/persons/templates/persons/events/my_events_details.html
+++ b/persons/templates/persons/events/my_events_details.html
@@ -1,10 +1,18 @@
 {% extends 'persons/base_navbar.html' %}
 
 {% block content %}
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
+        </li>
+    </ul>
     <div class="row">
         {% if events %}
             <div class="col-md-12 p-0 mt-3">
-            <div class="row">
+                <div class="row">
                     <h1 class="col-md-7">Mes Évenements</h1>
                     <div class="col-md-5 text-right">
                         {% if user.pk %}
@@ -16,7 +24,6 @@
                     <div class="row ">
                         <div class="col p-0">
                             <h3 class="col-md-12 p-0 mt-3">{{ event.title }} ({{ event.category }})</h3>
-                            <p>{{ person.pseudo }}</p>
                             <p>{{ event.event_date|date:'d/m - h:m' }}</p>
                             <p>{{ event.description }}</p>
                             <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
