--- a/persons/templates/persons/base.html
+++ b/persons/templates/persons/base.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 {% load bootstrap4 %}
+{% load static %}
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     {% bootstrap_css %}
+    <link rel="stylesheet" href="{% static 'fontawesome/css/fontawesome.min.css' %}">
     {% bootstrap_javascript jquery='full' %}
 </head>
 <body>
