--- a/persons/templates/persons/base_navbar.html
+++ b/persons/templates/persons/base_navbar.html
@@ -1,4 +1,5 @@
 {% extends 'persons/base.html' %}
+{% load static %}
 
 {% block header %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,8 +23,8 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         {% if user.pk %}
-                            <a class="dropdown-item" href="{% url 'profil' %}">Profil</a>
-                            <a class="dropdown-item" href="{% url 'logout' %}">Déconnexion</a>
+                            <a class="dropdown-item" href="{% url 'profil' %}"><i class="far fa-user"></i> Profil</a>
+                            <a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt"></i> Déconnexion</a>
                         {% else %}
                             <a class="dropdown-item" href="{% url 'login' %}">Connexion / Creer un compte</a>
                         {% endif %}
