--- a/persons/templates/persons/events/my_events_details.html
+++ b/persons/templates/persons/events/my_events_details.html
@@ -1,39 +1,79 @@
 {% extends 'persons/base_navbar.html' %}
 
 {% block content %}
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
-        </li>
-    </ul>
     <div class="row">
-        {% if events %}
-            <div class="col-md-12 p-0 mt-3">
-                <div class="row">
-                    <h1 class="col-md-7">Mes Évenements</h1>
-                    <div class="col-md-5 text-right">
-                        {% if user.pk %}
-                            <a class="btn btn-primary" href="{% url 'new-event' %}">Ajouter</a>
-                        {% endif %}
-                    </div>
+        <div class="col">
+            <div class="row">
+                <div class="col">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'profil' %}">Profil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'profil-events' %}">Events</a>
+                        </li>
+                    </ul>
                 </div>
-                {% for event in events %}
-                    <div class="row ">
-                        <div class="col p-0">
-                            <h3 class="col-md-12 p-0 mt-3">{{ event.title }} ({{ event.category }})</h3>
-                            <p>{{ event.event_date|date:'d/m - h:m' }}</p>
-                            <p>{{ event.description }}</p>
-                            <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
-                        </div>
-                    </div>
-                {% endfor %}
+
             </div>
-        {% else %}
-            <p>Il n'y a pas d'évenements pour le moment</p>
-        {% endif %}
+            <div class="row">
+                {% if events %}
+                    <div class="col-md-12 p-0 mt-3">
+                        <div class="row">
+                            <h1 class="col-md-7">Mes Évenements</h1>
+                            <div class="col-md-5 text-right">
+                                {% if user.pk %}
+                                    <a class="btn btn-primary" href="{% url 'new-event' %}">Ajouter</a>
+                                {% endif %}
+                            </div>
+                        </div>
+                        {% for event in events %}
+                            <div class="row ">
+                                <div class="col p-0">
+
+                                    <h3 class="col-md-12 p-0 mt-3">{{ event.title }} ({{ event.category }})</h3>
+                                    <p>{{ event.event_date|date:'d/m - h:m' }}</p>
+                                    <p>{{ event.description }}</p>
+                                    <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
+                                    <a href="{% url 'edit-event' event.pk %}" class="text-primary mr-2">Modifier</a>
+                                    <a href="{% url 'delete-event' event.pk %}" class="text-danger" data-toggle="modal"
+                                       data-target="#close_modal">Supprimer</a>
+                                </div>
+                            </div>
+                            <div id="close_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
+                                 data-keyboard="false">
+                                <div class="modal-dialog" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title">Supprimer cet évenement</h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p>Êtes-vous sûr de vouloir supprimer cet évenement</p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button class="btn btn-link" type="button" data-dismiss="modal"
+                                                    aria-label="Close">
+                                                <span aria-hidden="true">Annuler</span>
+                                            </button>
+                                            <a href="{% url 'delete-event' event.pk %}"
+                                               class="btn btn-danger">Confirmer</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    <p>Il n'y a pas d'évenements pour le moment</p>
+                {% endif %}
+            </div>
+        </div>
     </div>
+
+
 
 {% endblock %}
