--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -15,13 +15,11 @@
                 {% for event in events %}
                     <div class="row ">
                         <div class="col p-0">
-                            <h3 class="col-md-12 p-0 mt-3">{{ event.title }} ({{ event.category }})</h3>{{ event.pk }}
-                            <p>{{ event.person.pseudo }}</p>
-                            <p>{{ event.event_date|date:'d/m - h:m' }}</p>
-                            <p>{{ event.description }}</p>
-                            <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
-                            {% if person != event.person and not is_inscrit and is_inscrit.event.pk != event.pk %}
-                                <a href="{% url 'inscription-event' event.pk %}" class="btn btn-primary">S'inscrire</a>
+                            <h3 class="col-md-12 p-0 mt-3">{{ event.title|title }} ({{ event.category|title }})</h3>
+                            <p>Par {{ event.person.pseudo }} le {{ event.created_at|date:'d/m/y à h:m' }}</p>
+                            <p>{{ event.city|title }}</p>
+                            {% if user.pk %}
+                                <a href="{% url 'description-event' event.pk %}" class="btn btn-primary">Plus de détails</a>
                             {% endif %}
                         </div>
                     </div>
