--- a/persons/templates/persons/profil/profil_detail.html
+++ b/persons/templates/persons/profil/profil_detail.html
@@ -14,6 +14,9 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'profil-registered_events' %}">Mes inscriptions</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Mes inscriptions passées</a>
+        </li>
     </ul>
     <div class="row my-3">
         <div class="col-md-8">
