--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <div class="row">
-    <a class="text-primary" href="{% url 'details' %}"><i class="fa fa-arrow-left"></i> retour</a>
+        <a class="text-primary" href="{% url 'events' %}"><i class="fa fa-arrow-left"></i> retour</a>
         {% if event %}
             <div class="col p-0 mt-3 text-center">
-                <h1>{{ event.title|title }} ({{ event.category|title }})</h1>
+                <h1>{{ event.title|title }} <span class="badge badge-pill badge-primary">{{ event.category|title }}</span></h1>
                 <p>Par {{ event.person.pseudo }} le {{ event.event_date|date:'d/m/Y à h:m' }}</p>
                 <hr>
                 <h4>Description :</h4>
@@ -14,8 +14,8 @@
                 <h4>Lieu :</h4>
                 <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
                 {% if user.pk %}
-                    {% if person != event.person and not is_registered %}
-                        <a href="{% url 'inscription-event' event.pk %}" class="btn btn-primary">s'inscire</a>
+                    {% if person != event.person %}
+                        <a href="{% url 'inscription-event' event.pk %}" class="btn btn-primary{% if is_registered %} disabled{% endif %}">s'inscrire</a>
                     {% endif %}
                 {% endif %}
             </div>
