--- a/events/templates/events/event_form.html
+++ b/events/templates/events/event_form.html
@@ -5,14 +5,25 @@
     <form method="post">
         {% csrf_token %}
         <div>
-            {% bootstrap_field form.title required_css_class='required'%}
-            {% bootstrap_field form.description required_css_class='required'%}
-            {% bootstrap_field form.address required_css_class='required'%}
-            {% bootstrap_field form.zip_code required_css_class='required'%}
-            {% bootstrap_field form.city required_css_class='required'%}
-            {% bootstrap_field form.category required_css_class='required'%}
-            {% bootstrap_field form.event_date required_css_class='required'%}
-        </div>
-        <button type="submit">Ajouter</button>
+            {% bootstrap_field form.title required_css_class='required' %}
+            {% bootstrap_field form.description required_css_class='required' %}
+            {% bootstrap_field form.address required_css_class='required' %}
+            <div class="row">
+                <div class="col-md-6">
+                    {% bootstrap_field form.zip_code required_css_class='required' %}
+                </div>
+                <div class="col-md-6">
+                    {% bootstrap_field form.city required_css_class='required' %}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    {% bootstrap_field form.category required_css_class='required' %}
+                </div>
+                <div class="col-md-6">
+                    {% bootstrap_field form.event_date required_css_class='required' %}
+                </div>
+            </div>
+            <button type="submit" class="btn btn-outline-primary">Ajouter</button>
     </form>
 {% endblock %}
