--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -36,7 +36,7 @@
                                 <p>{{ inscription.event.event_date|date:'d/m/Y à h:m' }}</p>
                                 <p>{{ inscription.event.description }}</p>
                                 <p>{{ inscription.event.address }}, {{ inscription.event.zip_code }}, {{ inscription.event.city }}</p>
-                                <a class="text-success" data-toggle="modal" data-target="#close_modal">Noter</a>
+                                <a class="text-success {% if not inscription %}disabled{% endif %}" data-toggle="modal" data-target="#close_modal">Noter</a>
                             </div>
                         </div>
                         <div id="close_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
@@ -49,7 +49,7 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
-                                    <form method="post">
+                                    <form method="post" action="{% url 'profil-rating-finished-events' inscription.event.pk inscription.event.person.pk %}">
                                         <div class="modal-body">
                                             {% csrf_token %}
                                             {% bootstrap_field form.note required_css_class='required' %}
@@ -59,9 +59,7 @@
                                                     aria-label="Close">
                                                 <span aria-hidden="true">Annuler</span>
                                             </button>
-                                            <a href="{% url 'profil-finished-events' %}"
-                                               class="btn btn-success">Confirmer
-                                            </a>
+                                            <button type="submit" class="btn btn-primary">Confirmer</button>
                                         </div>
                                     </form>
                                 </div>
@@ -75,7 +73,4 @@
             </div>
         </div>
     </div>
-
-
-
 {% endblock %}
