--- a/events/templates/events/event_form.html
+++ b/events/templates/events/event_form.html
@@ -24,6 +24,30 @@
                     {% bootstrap_field form.event_date required_css_class='required' %}
                 </div>
             </div>
-            <button type="submit" class="btn btn-outline-primary">Ajouter</button>
+             <a class="btn btn-primary" data-toggle="modal" data-target="#add_modal">Ajouter</a>
     </form>
+
+     <div id="add_modal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static"
+         data-keyboard="false">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Noter</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Êtes-vous sûr de vouloir créer votre événement ?</p>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-link" type="button" data-dismiss="modal"
+                            aria-label="Close">
+                        <span aria-hidden="true">Annuler</span>
+                    </button>
+                    <button type="submit" class="btn btn-primary">Confirmer</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
