--- a/events/templates/persons/events/my_events_form.html
+++ b/events/templates/persons/events/my_events_form.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 
 {% block content %}
-    <form method="post">
+    <form id="picker" method="post">
         {% csrf_token %}
         <div>
             {% bootstrap_field form.title required_css_class='required'%}
