--- a/events/templates/persons/events/my_finished_events.html
+++ b/events/templates/persons/events/my_finished_events.html
@@ -33,14 +33,14 @@
                         <div class="row">
                             <div class="col">
                                 <h3>{{ inscription.event.title }} ({{ inscription.event.category }})</h3>
-                                <p>{{ inscription.event.event_date|date:'d/m/Y à h:m' }}</p>
+                                <p>{{ inscription.event.person }} - {{ inscription.event.event_date|date:'d/m/Y à h:m' }}</p>
                                 <p>{{ inscription.event.description }}</p>
                                 <p>{{ inscription.event.address }}, {{ inscription.event.zip_code }}, {{ inscription.event.city }}</p>
 {#                                    <p>KARAMAAAAAA</p>{{ inscription.getKarma }}#}
                                 {% if inscription.getKarma%}
                                     <p class="text-success">{{ inscription.getKarma }}/10</p>
                                 {% else %}
-                                    <a class="text-success {% if not inscription %}disabled{% endif %}" data-toggle="modal" data-target="#close_modal">Noter</a>
+                                    <a class="text-success" data-toggle="modal" data-target="#close_modal">Noter</a>
                                 {% endif %}
                             </div>
                         </div>
