--- a/events/templates/persons/base_navbar.html
+++ b/events/templates/persons/base_navbar.html
@@ -30,7 +30,7 @@
                     </div>
                 </li>
             </ul>
-            <form action="{% url 'search' %}" class="form-inline my-2 my-lg-0" method="get">
+            <form action="{% url 'events' %}" class="form-inline my-2 my-lg-0" method="get">
                 <input name="q" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
