--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -1,4 +1,5 @@
 {% extends 'persons/base_navbar.html' %}
+{% load static %}
 
 {% block content %}
     <div class="row">
@@ -24,7 +25,8 @@
                                     <span class="badge badge-pill badge-primary">{{ label }} ({{ count }})</span>
                                 {% else %}
                                     <a class="badge badge-pill badge-light"
-                                       href="{% url 'events' %}?category_filter={{ value }}&order_filter={{ order_filter }}{% if query is not None %}&q={{ query }}{% endif %}">{{ label|title }}
+                                       href="{% url 'events' %}?category_filter={{ value }}&order_filter=
+                                               {{ order_filter }}{% if query is not None %}&q={{ query }}{% endif %}">{{ label|title }}
                                         ({{ count }})</a>
                                 {% endif %}
                             </li>
@@ -34,8 +36,12 @@
                     <ul class="list-unstyled">
                         <li>
 
-                            <a class="badge badge-pill badge-{% if order_filter == 'event_date' %}primary{% else %}light{% endif %}" href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=event_date{% if query is not None %}&q={{ query }}{% endif %}"><i class="fas fa-arrow-up"></i> Date croissant</a>
-                            <a class="badge badge-pill badge-{% if order_filter == '-event_date' %}primary{% else %}light{% endif %}" href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=-event_date{% if query is not None %}&q={{ query }}{% endif %}"><i class="fas fa-arrow-down"></i> Date decroissant</a>
+                            <a class="badge badge-pill badge-{% if order_filter == 'event_date' %}primary{% else %}light{% endif %}"
+                               href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=event_date{% if query is not None %}&q={{ query }}{% endif %}"><i
+                                    class="fas fa-arrow-up"></i> Date croissant</a>
+                            <a class="badge badge-pill badge-{% if order_filter == '-event_date' %}primary{% else %}light{% endif %}"
+                               href="{% url 'events' %}?category_filter={{ category_filter }}&order_filter=-event_date{% if query is not None %}&q={{ query }}{% endif %}"><i
+                                    class="fas fa-arrow-down"></i> Date decroissant</a>
                         </li>
                     </ul>
                 </div>
@@ -44,9 +50,21 @@
                         {% for event in filtered_events %}
                             <div class="row">
                                 <div class="col p-0 mb-3">
+                                <div class="d-flex align-items-center">
                                     <h3 class="col-md-12 p-0">{{ event.title|title }}
-                                        ({{ event.category|title }})</h3>
+                                        ({{ event.category|title }}) </h3>
+                                     {% if event.person.note is not None %}
+                                        {% if event.person.note >= 7 %}
+                                            <img height="25" width="25" src="{% static 'assets/good.svg' %}">
+                                        {% elif event.person.note < 7 and event.person.note >= 4 %}
+                                            <img height="25" width="25" src="{% static 'assets/average.svg' %}">
+                                        {% else %}
+                                            <img height="25" width="25" src="{% static 'assets/bad.svg' %}">
+                                        {% endif %}
+                                    {% endif %}
+                                </div>
                                     <p>Par {{ event.person.pseudo }} le {{ event.event_date|date:'d/m/y à h:m' }}</p>
+
                                     <p>{{ event.city|title }}</p>
                                     {% if user.pk %}
                                         <a href="{% url 'description-event' event.pk %}" class="btn btn-primary">Plus de
