--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -5,7 +5,8 @@
         <a class="text-primary" href="{% url 'events' %}"><i class="fa fa-arrow-left"></i> retour</a>
         {% if event %}
             <div class="col p-0 mt-3 text-center">
-                <h1>{{ event.title|title }} <span class="badge badge-pill badge-primary">{{ event.category|title }}</span></h1>
+                <h1>{{ event.title|title }} <span
+                        class="badge badge-pill badge-primary">{{ event.category|title }}</span></h1>
                 <p>Par {{ event.person.pseudo }} le {{ event.event_date|date:'d/m/Y à h:m' }}</p>
                 <hr>
                 <h4>Description :</h4>
@@ -15,7 +16,11 @@
                 <p>{{ event.address }}, {{ event.zip_code }}, {{ event.city }}</p>
                 {% if user.pk %}
                     {% if person != event.person %}
-                        <a href="{% url 'inscription-event' event.pk %}" class="btn btn-primary{% if is_registered %} disabled{% endif %}">s'inscrire</a>
+                        {% if is_registered %}
+                            <p>Rendez-vous sur votre profil pour vous désinscrire</p>
+                        {% else %}
+                            <a href="{% url 'inscription-event' event.pk %}" class="btn btn-primary">s'inscrire</a>
+                        {% endif %}
                     {% endif %}
                 {% endif %}
             </div>
